logs/collective.gsqi.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/collective'...
Listing './lib/python3.5/site-packages/collective/gsqi'...
Listing './lib/python3.5/site-packages/collective/gsqi/content'...
Listing './lib/python3.5/site-packages/collective/gsqi/group'...
Compiling './lib/python3.5/site-packages/collective/gsqi/gs.py'...
***   File "./lib/python3.5/site-packages/collective/gsqi/gs.py", line 72
    print repr((node, edges))
             ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/collective/gsqi/gsml'...
Compiling './lib/python3.5/site-packages/collective/gsqi/qi.py'...
***   File "./lib/python3.5/site-packages/collective/gsqi/qi.py", line 12
    raise ValueError, 'The product is locked and cannot be uninstalled!'
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/collective/gsqi/refs'...
Listing './lib/python3.5/site-packages/collective/gsqi/workflow'...
Listing './lib/python3.5/site-packages/collective/monkeypatcher'...
Listing './lib/python3.5/site-packages/collective/monkeypatcher/tests'...
Listing './lib/python3.5/site-packages/collective.gsqi-0.3.egg-info'...
Listing './lib/python3.5/site-packages/collective.monkeypatcher-1.1.3.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
